add css section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,17 @@
+/*Typography*/
+h1, h2 {
+    font-family: 'Abril Fatface', cursive;
+    color:#5500ff;
+}
+p, a {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color:#0d0d0d;
+}
 
+
+
+/*Layout*/
+
+
+/*Media*/
